# VMware-Monitor

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README-CN.md  README.md  RELEASE_NOTES.md  SECURITY.md  SKILL.md  config.example.yaml  docker-compose.yml  pyproject.toml  server.json  smithery.yaml
.agents/skills/vmware-monitor/: AGENTS.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
codex-skill/: AGENTS.md
docs/integrations/: continue.md  cursor.md  goose.md  localcowork.md  mcp-agent.md  vscode-copilot.md
examples/: ollama-local-setup.md
examples/mcp-configs/: README.md  continue.yaml  cursor.json  goose.json  localcowork.json  mcp-agent.yaml  vscode-copilot.json
gemini-extension/: gemini-extension.json
mcp_server/: server.py
plugins/vmware-monitor/.claude-plugin/: plugin.json
plugins/vmware-monitor/skills/vmware-monitor/: SKILL.md
skill/: SKILL.md
skills/vmware-monitor/: SKILL.md
skills/vmware-monitor/evals/: evals.json
skills/vmware-monitor/references/: agent-guardrails.md  capabilities.md  cli-reference.md  health-summary-template.md  investigation-protocol.md  setup-guide.md
tests/: test_activity_sessions.py  test_cli_daemon_resilience.py  test_config.py  test_folder_filter.py  test_folder_path.py  test_init_wizard.py  test_no_destructive_code.py  test_no_destructive_ops.py  test_safe_error_passthrough.py  test_wired_commands.py
tests/eval/capability/: _scores.json  _skill.py  conftest.py  test_entity_reachability.py  test_error_actionability.py
tests/eval/regression/: test_attention.py  test_cluster_health_summary.py  test_declared_environment.py  test_deprecated_key_aliases.py  test_env_secret_obfuscation.py  test_error_resilience.py  test_health_html.py  test_host_boundary_batched.py  test_inventory_scale_issue31.py  test_investigate_host_datastore.py  test_investigate_vm.py  test_monitor_specific.py  test_ops_scale_n1.py  test_read_only_mode.py  test_release_blockers.py  test_result_envelope.py  test_returned_failure_is_audited.py  test_session_probe_eviction.py  test_vim_attribute_conformance.py
vmware_monitor/: __init__.py  cli.py  cli_base.py  cli_observability.py  config.py  connection.py  doctor.py  init_wizard.py
vmware_monitor/mcp_server/: __init__.py  __main__.py  server.py
vmware_monitor/notify/: audit.py  logger.py  webhook.py
vmware_monitor/ops/: _collect.py  _correlate.py  _html_base.py  activity.py  attention.py  attention_html.py  capacity.py  cluster_summary.py  health.py  health_html.py  infra_health.py  inventory.py  investigate_datastore.py  investigate_host.py  investigate_html.py  investigate_vm.py  performance.py  snapshots.py  vm_info.py
vmware_monitor/scanner/: alarm_scanner.py  log_scanner.py  scheduler.py
