[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmware-monitor"
version = "1.8.5"
description = "VMware vCenter/ESXi read-only monitoring tool. No destructive operations — code-level enforced."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Wei Zhou", email = "wei-wz.zhou@broadcom.com" }]
dependencies = [
    "pyvmomi>=8.0.3.0,<10.0",
    "pyaml>=24.0,<27.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<16.0",
    "apscheduler>=3.10,<4.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "mcp[cli]>=1.10,<2.0",
    "vmware-policy>=1.8.5,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<8.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
vmware-monitor = "vmware_monitor.cli:app"
vmware-monitor-mcp = "vmware_monitor.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["vmware_monitor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# These renderers embed a CSS template / long inline HTML as string literals;
# those lines exceed the 100-col limit by nature and cannot be reflowed without
# breaking the markup. _html_base.py holds the shared palette extracted from
# health_html.py; investigate_html.py renders the object-investigation bundles.
"vmware_monitor/ops/health_html.py" = ["E501"]
"vmware_monitor/ops/_html_base.py" = ["E501"]
"vmware_monitor/ops/investigate_html.py" = ["E501"]
"vmware_monitor/ops/attention_html.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require vCenter)",
    "capability: Capability evals — scored trends, not pass/fail gates. Excluded from the default run (they measure quality, so <100% is expected and must not read as a broken build). Run them with: pytest -m capability",
]
# Capability evals are opt-in; see the marker description above.
addopts = "-m 'not capability'"
